2008-01-19  Andreas Kirschbaum

	* Make unbind command work.

2008-01-16  Andreas Kirschbaum

	* Show correct weapon speed when connecting to recent Crossfire
	servers.

2008-01-15  Andreas Kirschbaum

	* Do not crash when applying a Glowing Crystal.

2008-01-12  Andreas Kirschbaum

	* Suppress spurious "level up" sound at re-login.

	* Correctly display stats after re-login.

	* Use "ragnorok" as default skin.

2008-01-09  Andreas Kirschbaum

	* All to bind a list of commands to a key.

2008-01-08  Andreas Kirschbaum

	* Play a sound when character levels up.

2008-01-06  Andreas Kirschbaum

	* Fix crash when entering a long command line.

	* ragnorok: Highlight the readied skill in skills dialog.

	* Do not crash when identifying items.

	* Fix display glitches when scrolling the map view. Now the
	character is always displayed in the center of the screen.

2008-01-05  Andreas Kirschbaum

	* Try harder to fall back to windowed mode if either full-screen
	mode or display mode change is not supported. Remove options -F
	and -B.

	* Make sure auto-repeating buttons stop firing when the mouse is
	moved off.

	* Do not overwrite book contents with random text messages.

	* Close book dialog when server connection breaks.

	* ragnorok, prelude: Reset ground/spells/inventory/messages view
	scroll position when connecting to a server.

	* ragnorok: Reset ground view scroll position when character
	moves.

	* Correctly update fog-of-war information in magic map.

	* Correctly update magic map when character is invisible.

	* Implement command queue to keep the client responsive when
	executing repetitive commands (praying, searching traps).

	* ragnorok: Improve scrolling in inventory dialog.

	* skin: Add support for command lists executing if at least one
	sub-command can execute.

2007-12-23  Andreas Kirschbaum

	* Remember last used player name.

	* Implement overview map display.

2007-12-22  Andreas Kirschbaum
