@@ -1,5 +1,7 @@
 2008-01-19  Andreas Kirschbaum
 
+	* Support per-character key bindings: bind -c/unbind -c.
+
 	* Make unbind command work.
 
 2008-01-16  Andreas Kirschbaum
